--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,11 @@
             android:layout_height="wrap_content"
             android:text="基础信息"
             android:id="@+id/btnBaseInfo"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="解码"
+            android:id="@+id/btnDecode"/>
 
     </LinearLayout>
 </ScrollView>
