--- a/ffmpegdecoder/src/main/res/layout/activity_main.xml
+++ b/ffmpegdecoder/src/main/res/layout/activity_main.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.sjl.ffmpegdecoder.MainActivity">
-
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/btnToYUVH264"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="转YUV和H264"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv"/>
+</LinearLayout>
